Added login page, halls page, boulders page, and some server-client interraction

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,1 +1,32 @@
-<p>Salut {{= it.test}} !!</p>
+<!-- <p>Salut {{= it.test}} !!</p> -->
+
+<div class="container">
+    <div id="HomeMessageContainer">
+    
+    </div>
+    
+    <h1 class="title is-1">Se connecter</h1>
+
+    <div class="content">
+        <p>
+            Il est recommandé de se connecter, afin de pouvoir enregistrer de nouveaux blocs, mais aussi enregistrer sa progression.
+        </p>
+        <p>
+            Il est toutefois possible d'ignorer cette étape, et de simplement consulter les blocs existants.
+        </p>
+    </div>
+
+    <div class="field">
+        <div class="control">
+            <input class="input" type="text" placeholder="Pseudo / Nom">
+        </div>
+    </div>
+    <div class="field">
+        <div class="control">
+            <input class="input" type="password" placeholder="Mot de passe">
+        </div>
+    </div>
+    <button id="HomeConnectButton" class="button is-primary">Se connecter</button>
+
+    <button id="HomeIgnoreButton" class="button">Ignorer</button>
+</div>
