--- a/www/templates/boulders.html
+++ b/www/templates/boulders.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <button id="BouldersAddButton" class="button">+</button>
     <div id="BouldersListContainer" class="boulders">
         
     </div>
