Little advance on the newBoulder page

--- a/www/templates/newBoulder.html
+++ b/www/templates/newBoulder.html
@@ -1,1 +1,8 @@
-<button id="NewBoulderNewImageButton">Get image</button>
+<button class="button is-info" id="NewBoulderNewImageButton">Get image</button>
+<div class="card">
+    <img id="NewBoulderImage" alt="Boulder image">
+</div>
+<input type="text" class="input" placeholder="Courte description"/>
+<input type="number" class="input" placeholder="Difficulté"/>
+<button id="NewBoulderAddButton" class="button is-success" >Ajouter</button>
+
