--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -18,12 +18,12 @@
 
     <div class="field">
         <div class="control">
-            <input class="input" type="text" placeholder="Pseudo / Nom">
+            <input id="HomePseudoInput" class="input" type="text" placeholder="Pseudo / Nom">
         </div>
     </div>
     <div class="field">
         <div class="control">
-            <input class="input" type="password" placeholder="Mot de passe">
+            <input id="HomePasswordInput" class="input" type="password" placeholder="Mot de passe">
         </div>
     </div>
     <button id="HomeConnectButton" class="button is-primary">Se connecter</button>
