Better display of the difficulty

--- a/www/templates/boulders.html
+++ b/www/templates/boulders.html
@@ -1,6 +1,6 @@
 <div class="container">
     <button id="BouldersAddButton" class="button">+</button>
-    <div id="BouldersListContainer" class="boulders">
+    <div id="BouldersListContainer" class="boulders columns is-multiline is-mobile">
         
     </div>
 </div>
