--- a/www/css/index.css
+++ b/www/css/index.css
@@ -34,11 +34,10 @@ h1 {
     top: 0;
     z-index: 100;
 }
-
+/*
 .thumb-card {
-    max-width: 45%;
-    margin: auto;
-}
+    
+}*/
 
 .main-card {
     margin-top: 3.5em;
@@ -84,4 +83,9 @@ h1 {
     position: absolute;
     right: 2px;
     bottom: 2px;
+}
+
+.columns {
+    margin-left: 0!important;
+    margin-right: 0!important;
 }
