--- a/www/templates/cardBoulder.html
+++ b/www/templates/cardBoulder.html
@@ -1,4 +1,5 @@
-<div class="card thumb-card">
+<div class="column is-half">
+  <div class="card thumb-card">
     <div class="card-image">
       <figure class="image">
         <img id="boulder" src="https://i2.wp.com/www.nantaise.fr/wp-content/uploads/2018/07/Blog-Nantes-sport-block-out-salle-escalade1.jpg">
@@ -9,7 +10,7 @@
     </div>
     <div class="card-content">
       <div class="content">
-        <div class="tags">
+        <div class="tags main-only">
           <span class="tag is-info is-light">jeté</span>
         </div>
         
@@ -99,3 +100,4 @@
       </div>
     </div>
   </div>
+</div>
