Add a left sidebar, and working upload

--- a/www/templates/cardBoulder.html
+++ b/www/templates/cardBoulder.html
@@ -2,7 +2,7 @@
   <div class="card thumb-card">
     <div class="card-image">
       <figure class="image">
-        <img id="boulder" src="https://i2.wp.com/www.nantaise.fr/wp-content/uploads/2018/07/Blog-Nantes-sport-block-out-salle-escalade1.jpg">
+        <img id="boulder" src="{{= it.image}}">
       </figure>
       <div id="holds" class="main-only">
       </div>
