--- a/www/templates/newBoulder.html
+++ b/www/templates/newBoulder.html
@@ -2,7 +2,7 @@
 <div class="card">
     <img id="NewBoulderImage" alt="Boulder image">
 </div>
-<input type="text" class="input" placeholder="Courte description"/>
-<input type="number" class="input" placeholder="Difficulté"/>
+<input id="NewBoulderDescriptionInput" type="text" class="input" placeholder="Courte description"/>
+<input id="NewBoulderDifficultyInput" type="number" class="input" placeholder="Difficulté"/>
 <button id="NewBoulderAddButton" class="button is-success" >Ajouter</button>
 
